--- a/TFLLab4/pom.xml
+++ b/TFLLab4/pom.xml
@@ -23,12 +23,14 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.10.1</version>
       <scope>test</scope>
     </dependency>
-  </dependencies><build>
+
+  </dependencies>
+  <build>
   <plugins>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
